stupid variable naming errors

--- a/frontend/temp-colorTheme.html
+++ b/frontend/temp-colorTheme.html
@@ -36,8 +36,8 @@
             --text-color--primary: #f6f6f6;
             --text-color--secondary: #727880;
 
-            --accent-color__primary: #0787d4; /* Mehr */
-            --accent-color__scondary: #58bdf9; /* Statistik */
+            --accent-color--primary: #0787d4; /* Mehr */
+            --accent-color--secondary: #58bdf9; /* Statistik */
 
             --nav__background-color: #1f2b36;
 
