--- a/frontend/temp-colorTheme.html
+++ b/frontend/temp-colorTheme.html
@@ -23,7 +23,7 @@
             --nav__background-color: #fefeff;
 
             --button__text-color: #f6f6f6;
-            --button__background-color: #0588d6;
+            --button__background-color: #0588d6; /* Plus */
 
             --icon-color: #36464e;
         }
