--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,5 +17,12 @@
       padding: 0;
       font-family: Arial, sans-serif;
     }
+    #app {
+      display: flex;
+      height: 100vh;
+      width: 100vw;
+      flex-direction: column;
+      align-items: center;
+    }
   </style>
 </html>
