Rename WeekKalender -> DayCalender and move it from the DiaryView back to App.vue

--- a/frontend/temp-colorTheme.html
+++ b/frontend/temp-colorTheme.html
@@ -7,7 +7,7 @@
     <style>
         :root {
             --nav-bar__height: 50px;
-            --week-kalender__height: 50px;
+            --day-calender__height: 50px;
 
             
             --background-color--primary: #f8fafd;
